--- a/Schedule.Infrastructure/Schedule.Infrastructure.csproj
+++ b/Schedule.Infrastructure/Schedule.Infrastructure.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Schedule.Domain\Schedule.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
